--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 
 .login__button {
   width: 25%;
+  background-color: #2c3e50;
   text-align: center;
   margin: 48px auto;
 }
@@ -38,7 +39,7 @@
 }
 
 
-.form__input {
+.search__input {
   background: transparent;
   border: 0;
   border-bottom: solid 2px #2c3e50;
@@ -48,7 +49,7 @@
   padding: 0.4rem;
 }
 
-.form__button {
+.search__button {
   border: solid 2px #3c86e7;
   background: transparent;
   padding: 0.2rem 0.9rem;
